# ndi2srt

./: CMakeLists.txt  README.md
src/: main.c
